boulder/boulder/tests/compile_fail/type/structures/init/twice_twice.bo
# Field `a` specified more than once
# (12:

struct A {
    a: u32,
    b: u32,
}

fn test() -> A {
    A {
        a: 7,
        a: 42,
    }
}